<resources>
    <string name="app_name">PBD Executives</string>
    <string name="executives">Executives</string>
    <!--  Login activity  -->
    <string name="login_to_continue">Please Login to continue</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account? Please contact your\u0020</string>
    <string name="administrator">administrator</string>
    <string name="copyright_statements">© 2020 PBD Eduworld Private Limited, India. All Rights Reserved.</string>
    <!--  Home activity  -->
    <string name="getsGeoLocation">Gets geolocation and stores in local db</string>
    <string name="please_allow_location_access">Please Allow Location Access for the app to get yourself on the duty.</string>
    <string name="home">Home</string>
    <string name="you_are">You are\u0020</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="duty">Duty\u0020</string>
    <string name="important_instructions">Important Instructions:</string>
    <string name="my_tasks">My Tasks</string>
    <string name="receipts">Receipts</string>
    <string name="follow_ups">Follow Ups</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="system_log">System Log</string>
    <string name="about">About</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search...</string>
    <string name="add_new_task">Add New Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="location_permission_message">You need to allow this app to have location access in order to assign you on the Duty.</string>
    <string name="location_permission_denied">Location Permission Denied! Please change the settings.</string>
    <string name="location_not_enabled">Location service not enabled!</string>
    <string name="navigation_notification_message">You are on the Duty...</string>
    <string name="attention">Attention!</string>
    <string name="executive_avatar">Executive Avatar</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="hrs">Hrs</string>
    <string name="mins">Mins</string>
    <string name="calculating">Calculating...</string>
    <string name="name">Name:\u0020</string>
    <string name="email_optional">Email</string>
    <string name="email">Email:\u0020</string>
    <string name="companyNo">Phone No.:\u0020</string>
    <string name="personalNo">Personal Ph No.:\u0020</string>
    <string name="address">Address:\u0020</string>
    <string name="log_out">Log Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_type">Task Type</string>
    <string name="select_party">Select Party</string>
    <string name="type_here">Type here...</string>
    <string name="select_only_from_list">Select only from the list...</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="subject">Subject</string>
    <string name="contact_person_name">Contact Person Name</string>
    <string name="contact_person_number">Contact Person Number</string>
    <string name="reason_for_visit">Reason for Visit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remarks">Remarks</string>
    <string name="save">Save</string>
    <string name="reminder_not_set">Reminder not set</string>
    <string name="follow_up_details">Follow Up Details</string>
    <string name="party_name">Party Name</string>
    <string name="party_address">Party Address</string>
    <string name="reminder_on">Reminder On</string>
    <string name="follow_up_for">Follow Up For</string>
    <string name="completed_on">Completed on</string>
    <string name="history">History:</string>
    <string name="delete">Delete</string>
    <string name="warning">Warning</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete_task">Are you sure you want to delete this task?</string>
    <string name="confirm_logout_user">Are you sure you want to logout? This will delete all your data. Please confirm</string>
    <string name="create_receipt">Create Receipt</string>
    <string name="received_the_sum_of_rupees">Received the sum of Rupees,</string>
    <string name="enter_amount">Enter the amount</string>
    <string name="paid_by">Paid By,</string>
    <string name="cash">Cash</string>
    <string name="cheque">Cheque</string>
    <string name="cheque_no">Cheque No.</string>
    <string name="demand_draft">Demand Draft</string>
    <string name="demand_draft_no">Demand Draft No.</string>
    <string name="payment">Payment,</string>
    <string name="part">Part</string>
    <string name="full">Full</string>
    <string name="next">Next</string>
    <string name="cannot_generate_the_receipt">Cannot generate the receipt. Please try again.</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="receipt_preview">Receipt Preview</string>
    <string name="receipt_company_header">M/S. PBD Eduworld PVT. LTD.</string>
    <string name="receipt_company_address">"Prasad Arcade" 4th floor, Mahatma Phule Road, Opp. Shree Datta Mandir, Shahapur, Belgavi - 03, KARNATAKA</string>
    <string name="receipt_company_email">prasadbookdist@gmail.com</string>
    <string name="phone">Phone:\u0020</string>
    <string name="receipt_company_phone">0831-4208621, 4208622</string>
    <string name="mobile">Mobile:\u0020</string>
    <string name="receipt_company_mobile">9341108584, 9845646605</string>
    <string name="receipt_representative">Representative:</string>
    <string name="receipt_no">Receipt No.:</string>
    <string name="date">Date:</string>
    <string name="customer_code">Customer Code:</string>
    <string name="cust_contact">Customer Contact:</string>
    <string name="receipt_paid_by">Paid By:</string>
    <string name="receipt_cheque_no">Cheque No:</string>
    <string name="receipt_dd_no">Demand Draft No:</string>
    <string name="receipt_payment">Payment:</string>
    <string name="paid">Paid:</string>
    <string name="rupee">₹</string>
    <string name="receipt_condition">Receipt valid subject to realization of Cheque</string>
    <string name="send_receipt">Send Receipt</string>
    <string name="confirm_send_receipt">Are you sure, you want to send this receipt to </string>
    <string name="this_receipt_is_sent_to">This receipt is sent to \u0020</string>
    <string name="send_to_name">Name</string>
    <string name="send_receipt_to">Send Receipt to</string>
    <string name="please_wait">Please Wait</string>
    <string name="generating_receipt">Generating the Receipt...</string>
    <string name="invalid_amount">Invalid Amount, Please enter proper amount</string>
    <string name="getting_location">\u0020Getting Location, Please Wait...</string>
    <string name="follow_up_reminder">Follow Up Reminder</string>
    <string name="info">Information</string>
    <string name="notification_details">Notification Details</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_branch">Bank Branch</string>
    <string name="proper_mobile_number">Enter a proper 10 digit mobile number</string>
    <string name="about_us">About Us</string>
    <string name="downloading_receipt">Downloading the receipt...</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="app_version_changed">A newer version of this app has been released, Please download the app from the following link</string>
    <string name="app_download_link">https://mypbd.net/api/downloadFile/app</string>

    <string-array name="task_done_questions">
        <item>Done with Sampling?</item>
        <item>Done with Receiving Order?</item>
        <item>Done with Payments?</item>
    </string-array>

    <string-array name="task_types">
        <item>Visit</item>
        <item>Other</item>
    </string-array>

    <string-array name="reasons_for_visit">
        <item>Sampling</item>
        <item>To receive order</item>
        <item>To get payment</item>
    </string-array>

    <string-array name="set_reminder_labels">
        <item>Set a reminder to complete the Sampling</item>
        <item>Set a reminder to get Order</item>
        <item>Set a reminder for next follow up for the Order</item>
        <item>Set a reminder to get Payments</item>
        <item>Set a reminder for next follow up for the Payment</item>
    </string-array>

    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
