<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/option_notifications"
        android:icon="@drawable/notification_bell"
        android:title="@string/notifications"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/option_search"
        android:title="@string/search_title"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/option_profile"
        android:title="@string/profile"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/option_systemLog"
        android:title="@string/system_log"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/option_about"
        android:title="@string/about"
        app:showAsAction="collapseActionView" />

</menu>